--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - '*.md'
       - 'template.html'
+      - '.github'
 
 jobs:
   html:
@@ -29,4 +30,21 @@ jobs:
           git add *.html
           git commit -m "Add compiled HTML"
           git push
-          
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
+
+  deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    runs-on: ubuntu-latest
+    needs: html
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    steps:
+      - name: Deploy artifact
+        id: deployment
+        uses: actions/deploy-pages@v4
