--- a/.github/workflows/html.yml
+++ b/.github/workflows/html.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - '*.md'
       - 'template.html'
-      - '.github'
+      - '**/*.yml'
 
 jobs:
   html:
@@ -28,11 +28,13 @@ jobs:
           git config --global user.email 'otp-bot@opentripplanner.org'
           git config --global user.name 'OTP Bot'
           git add *.html
-          git commit -m "Add compiled HTML"
+          git commit -m "Add compiled HTML" || true
           git push
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./"
 
   deploy:
     permissions:
